// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API surface (golden — update intentionally) > @classytic/vixel 1`] = `
[
  "ASPECT_DIMENSIONS",
  "AbortError",
  "ConfigError",
  "ErrorCode",
  "FFmpegError",
  "HLSProcessor",
  "HLSProcessorError",
  "HLS_AUDIO_CODECS",
  "HLS_VIDEO_CODECS",
  "LOUDNESS_PRESETS",
  "Logger",
  "MAX_PROXY_HEIGHT",
  "MAX_PROXY_WIDTH",
  "PLATFORM_LIMITS",
  "ProbeError",
  "QUALITY_PRESETS",
  "Source",
  "TempFileManager",
  "VariantEncoder",
  "VideoPipeline",
  "VixelError",
  "WEBM_AUDIO_CODECS",
  "WEBM_VIDEO_CODECS",
  "addWatermark",
  "adjustColor",
  "adjustVolume",
  "applyFFmpegFilter",
  "applyLut",
  "assertSafeUrl",
  "buildAudioMixFilter",
  "buildColorAdjustFilter",
  "buildCommandString",
  "buildDrawtextFilter",
  "buildEditorProxyArgs",
  "buildFadeFilters",
  "buildGlowFilter",
  "buildKenBurnsFilter",
  "buildLoudnormFilter",
  "buildLut3dFilter",
  "buildOverlayFilter",
  "buildParallaxFilter",
  "buildReframeFilter",
  "buildSubtitlesFilter",
  "buildXfadeGraph",
  "burnCaptions",
  "changeSpeed",
  "checkFFmpegVersion",
  "checkHLSCompatibility",
  "compressVideo",
  "concatWithTransitions",
  "concatenateVideos",
  "configToSpawnOptions",
  "convertFormat",
  "createCopyVariant",
  "createLimiter",
  "cropResize",
  "defaultPosterSec",
  "defaultSpriteIntervalSec",
  "detectHardwareAccel",
  "downscaleFilter",
  "editorPackage",
  "editorProxy",
  "escapeDrawtext",
  "escapeSubtitlePath",
  "estimateGifSize",
  "estimateThumbnailSize",
  "extractAudio",
  "extractFrameAt",
  "extractThumbnail",
  "extractThumbnails",
  "fade",
  "fetchToFile",
  "fitWithin",
  "formatDuration",
  "formatWebVTTTime",
  "generateChapters",
  "generateChaptersFromTranscript",
  "generateGif",
  "generateSmartChapters",
  "generateSprites",
  "getPreset",
  "getRecommendedGifConfig",
  "glow",
  "hlsLadder",
  "isAbortError",
  "isConfigError",
  "isFFmpegError",
  "isHLSAudioCodec",
  "isHLSProcessorError",
  "isHLSVideoCodec",
  "isPrivateOrReservedIp",
  "isProbeError",
  "isVixelError",
  "kenBurns",
  "ladderFor",
  "mapSettled",
  "mapWithConcurrency",
  "mixAudio",
  "normalizeAudio",
  "normalizeLoudness",
  "optimizeGifForSize",
  "outputSize",
  "overlay",
  "parallax3d",
  "pipeline",
  "probeVideo",
  "reframe",
  "removeQuietly",
  "replaceAudio",
  "selectQualityLadder",
  "selectVariant",
  "slideshow",
  "spawnFFmpeg",
  "toEven",
  "toVixelError",
  "trimVideo",
  "tryCatch",
  "tryCatchSync",
  "validateGifDuration",
  "variantToPreset",
]
`;

exports[`public API surface (golden — update intentionally) > @classytic/vixel/captions 1`] = `
[
  "CAPTION_PRESETS",
  "buildAss",
  "buildCueText",
  "buildStyleLine",
  "burnCaptions",
  "cueEvents",
  "hexToAssBgr",
  "msToAssTime",
]
`;

exports[`public API surface (golden — update intentionally) > @classytic/vixel/compose 1`] = `
[
  "buildComposeGraph",
  "buildTextOverlayAss",
  "compose",
  "defineComposition",
  "fpsNumber",
  "overlayWidthPx",
  "overlayXY",
  "planTimeline",
]
`;

exports[`public API surface (golden — update intentionally) > @classytic/vixel/generators 1`] = `
[
  "ASPECT_DIMENSIONS",
  "LOUDNESS_PRESETS",
  "addWatermark",
  "adjustColor",
  "adjustVolume",
  "applyLut",
  "buildAudioMixFilter",
  "buildColorAdjustFilter",
  "buildDrawtextFilter",
  "buildFadeFilters",
  "buildGlowFilter",
  "buildKenBurnsFilter",
  "buildLoudnormFilter",
  "buildLut3dFilter",
  "buildOverlayFilter",
  "buildParallaxFilter",
  "buildReframeFilter",
  "buildSubtitlesFilter",
  "buildXfadeGraph",
  "burnCaptions",
  "changeSpeed",
  "compressVideo",
  "concatWithTransitions",
  "concatenateVideos",
  "convertFormat",
  "cropResize",
  "detectHardwareAccel",
  "escapeDrawtext",
  "escapeSubtitlePath",
  "estimateGifSize",
  "estimateThumbnailSize",
  "extractAudio",
  "extractFrameAt",
  "extractThumbnail",
  "extractThumbnails",
  "fade",
  "generateChapters",
  "generateChaptersFromTranscript",
  "generateGif",
  "generateSmartChapters",
  "generateSprites",
  "glow",
  "kenBurns",
  "mixAudio",
  "normalizeAudio",
  "normalizeLoudness",
  "overlay",
  "parallax3d",
  "reframe",
  "replaceAudio",
  "slideshow",
  "trimVideo",
]
`;

exports[`public API surface (golden — update intentionally) > @classytic/vixel/profiles 1`] = `
[
  "buildEditorProxyArgs",
  "defaultPosterSec",
  "defaultSpriteIntervalSec",
  "editorPackage",
  "editorProxy",
  "hlsLadder",
  "ladderFor",
]
`;

exports[`public API surface (golden — update intentionally) > @classytic/vixel/utils 1`] = `
[
  "Logger",
  "createChildLogger",
  "formatWebVTTTime",
]
`;
